--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     </head>
     <body>
 <h1>Cook AI</h1>
-<h2>Created by Prajesh Kumar G</h2>
+<h2>Created by Navdeep Chawla</h2>
 <h3>Description</h3>
 Cook AI is app that helps users to find recipes based on the ingredients they have.
-    <h2>Privacy Policy</h2> <p> Prajesh Kumar G built the Cook AI app as a Free app. This SERVICE is provided by
-                    Prajesh Kumar G at no cost and is intended for use as is.
+    <h2>Privacy Policy</h2> <p> Navdeep Chawla built the Cook AI app as a Free app. This SERVICE is provided by
+                    Navdeep Chawla at no cost and is intended for use as is.
                   </p> <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure
                     of Personal Information if anyone decided to use my Service.
                   </p> <p>If you choose to use my Service, then you agree to the collection and use of information in
@@ -57,7 +57,7 @@ Cook AI is app that helps users to find recipes based on the ingredients they ha
                     the new Privacy Policy on this page. These changes are effective immediately after they are posted on
                     this page.
                   </p> <p><strong>Contact Us</strong></p> <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact
-                    me via email- prajeshkumarg@gmail.com.
+                    me via email- navdeepchawla2000@gmail.com .
                   </p> 
     </body>
     </html>
